force-app/main/default/objects/Student_Fee_Payment__c/Student_Fee_Payment__c.object-meta.xml
<CustomObject>
    <label>Student Fee Payment</label>
    <nameField>
        <displayFormat>SFP-{0000}</displayFormat>
        <label>Student Fee Payments Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Fee Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>