force-app/main/default/objects/Student_Fee_Payment__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>To Enter the bank name of the payment made by an applicant</description>
    <label>Bank Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>