force-app/main/default/objects/Student_Fee_Payment__c/fields/Cheque_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Bank_Name__c</fullName>
    <label>Cheque Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AU Bank</fullName>
            </value>
            <value>
                <fullName>Axis Bank</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda</fullName>
            </value>
            <value>
                <fullName>Bank of India</fullName>
            </value>
            <value>
                <fullName>Canara Bank</fullName>
            </value>
            <value>
                <fullName>Central Bank of India</fullName>
            </value>
            <value>
                <fullName>City Bank</fullName>
            </value>
            <value>
                <fullName>Corporation Bank</fullName>
            </value>
            <value>
                <fullName>DCB Bank</fullName>
            </value>
            <value>
                <fullName>Federal Bank</fullName>
            </value>
            <value>
                <fullName>HDFC Bank</fullName>
            </value>
            <value>
                <fullName>ICICI Bank</fullName>
            </value>
            <value>
                <fullName>IDBI Bank</fullName>
            </value>
            <value>
                <fullName>IDFC FIRST Bank</fullName>
            </value>
            <value>
                <fullName>Indian Bank</fullName>
            </value>
            <value>
                <fullName>Indian Overseas Bank</fullName>
            </value>
            <value>
                <fullName>IndusInd Bank</fullName>
            </value>
            <value>
                <fullName>Jammu and Kashmir Bank</fullName>
            </value>
            <value>
                <fullName>JANA SMALL FINANCE BANK</fullName>
                <isActive>false</isActive>
                <label>JANA SMALL FINANCE BANK</label>
            </value>
            <value>
                <fullName>Janatha sahakari Bank</fullName>
                <isActive>false</isActive>
                <label>Janatha sahakari Bank</label>
            </value>
            <value>
                <fullName>Karnataka Bank</fullName>
            </value>
            <value>
                <fullName>Karur Vysya Bank</fullName>
            </value>
            <value>
                <fullName>Kotak Mahindra Bank</fullName>
            </value>
            <value>
                <fullName>Punjab and Sind Bank</fullName>
            </value>
            <value>
                <fullName>Punjab National Bank</fullName>
            </value>
            <value>
                <fullName>RBL Bank</fullName>
            </value>
            <value>
                <fullName>South Indian Bank</fullName>
            </value>
            <value>
                <fullName>SRI SUDHA CO-OPERATIVE BANK</fullName>
            </value>
            <value>
                <fullName>State Bank of India</fullName>
            </value>
            <value>
                <fullName>UCO BANK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>