force-app/main/default/objects/Student_Fee_Payment__c/fields/Cheque_DD_Date__c.field-meta.xml
<CustomField>
    <fullName>Cheque_DD_Date__c</fullName>
    <description>The Date mentioned on the Cheque/DD</description>
    <inlineHelpText>Date mentioned on the Cheque/DD</inlineHelpText>
    <label>Cheque/DD Date</label>
    <type>Date</type>
</CustomField>