force-app/main/default/objects/Student_Fee_Payment__c/fields/Cheque_DD_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_DD_Number__c</fullName>
    <description>To Enter the Cheque/DD number of the payment by the Applicant</description>
    <inlineHelpText>Enter Cheque/DD number</inlineHelpText>
    <label>Cheque/DD Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>