force-app/main/default/objects/Student_Fee_Payment__c/fields/Cheque_DD_Realisation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cheque_DD_Realisation_Date__c</fullName>
    <description>Captures Cheque/DD Realisation Date</description>
    <inlineHelpText>Capture Cheque/DD Realisation Date</inlineHelpText>
    <label>Cheque/DD Realisation Date</label>
    <type>Date</type>
</CustomField>