force-app/main/default/objects/Student_Fee_Payment__c/fields/Converted_Excess_Amount__c.field-meta.xml
<CustomField>
    <fullName>Converted_Excess_Amount__c</fullName>
    <label>Converted Excess Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>