force-app/main/default/objects/Student_Fee_Payment__c/fields/Exam_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Exam_Application_Number__c</fullName>
    <formula>Student_Fee__r.Exam_Application_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exam Application Number</label>
    <type>Text</type>
</CustomField>