force-app/main/default/objects/Student_Fee_Payment__c/fields/Line_Item_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Payment_Gateway__c</fullName>
    <label>Payment Gateway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Razorpay</fullName>
            </value>
            <value>
                <fullName>Eazypay</fullName>
            </value>
            <value>
                <fullName>Paytm</fullName>
            </value>
            <value>
                <fullName>Billdesk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>