force-app/main/default/objects/Student_Fee_Payment__c/fields/Logisys_Integration__c.field-meta.xml
<CustomField>
    <fullName>Logisys_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logisys Integration</label>
    <type>Checkbox</type>
</CustomField>