force-app/main/default/objects/Student_Fee_Payment__c/fields/Mode_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Payment__c</fullName>
    <label>Mode of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Card Swipe</fullName>
                <isActive>false</isActive>
                <label>Card Swipe</label>
            </value>
            <value>
                <fullName>Cash</fullName>
                <isActive>false</isActive>
                <label>Cash</label>
            </value>
            <value>
                <fullName>Cash Collected in Bank</fullName>
                <isActive>false</isActive>
                <label>Cash Collected in Bank</label>
            </value>
            <value>
                <fullName>Cheque</fullName>
                <isActive>false</isActive>
                <label>Cheque</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>