force-app/main/default/objects/Student_Fee_Payment__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <inlineHelpText>For offline payment through reference number.</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>