force-app/main/default/objects/Student_Fee_Payment__c/fields/Payment_Link_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_Id__c</fullName>
    <label>Payment Link Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>