force-app/main/default/objects/Student_Fee_Payment__c/fields/Payment_Mode_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode_Type__c</fullName>
    <inlineHelpText>Debit Card / Credit Card / Netbanking / UPI</inlineHelpText>
    <label>Payment Mode Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>