force-app/main/default/objects/Student_Fee_Payment__c/fields/Push_to_SAP__c.field-meta.xml
<CustomField>
    <fullName>Push_to_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Push to SAP</label>
    <type>Checkbox</type>
</CustomField>