force-app/main/default/objects/Student_Fee_Payment__c/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <label>Reference Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>