force-app/main/default/objects/Student_Fee_Payment__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <description>Created for the Offline payment mode of Payment link and Card Swipe.</description>
    <inlineHelpText>Reference numbers from the URL/ Card swiped payments.</inlineHelpText>
    <label>Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>