force-app/main/default/objects/Student_Fee_Payment__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>