force-app/main/default/objects/Student_Fee_Payment__c/fields/SAP_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_ID__c</fullName>
    <label>SAP ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>