force-app/main/default/objects/Student_Fee_Payment__c/fields/SF_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_Transaction_ID__c</fullName>
    <label>SF Transaction ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>