force-app/main/default/objects/Student_Fee_Payment__c/fields/Student_Payment__c.field-meta.xml
<CustomField>
    <fullName>Student_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Payment</label>
    <referenceTo>Student_Payment__c</referenceTo>
    <relationshipLabel>Student Fee Payments</relationshipLabel>
    <relationshipName>Student_Fee_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>