force-app/main/default/objects/Student_Fee_Payment__c/fields/Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Status__c</fullName>
    <label>Transaction Status (Technical)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>