force-app/main/default/objects/Student_Fee_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Student_Fee__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Student_Payment__c</columns>
    <columns>Amount__c</columns>
    <columns>Transaction_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>